[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/TrayRigidBody.gd" type="Script" id=1]
[ext_resource path="res://scene/Root.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]

[sub_resource type="CylinderShape" id=2]

[node name="Root" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.966367, 0.257167, 0, -0.257167, 0.966367, 0, 2.27664, 6.11522 )

[node name="BallRigidBody" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79753, 0 )
sleeping = true

[node name="CollisionShape" type="CollisionShape" parent="BallRigidBody"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CSGSphere" type="CSGSphere" parent="BallRigidBody/CollisionShape"]
radial_segments = 20

[node name="TrayRigidBody" type="RigidBody" parent="."]
mode = 1
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="TrayRigidBody"]
transform = Transform( 3, 0, 0, 0, 0.1, 0, 0, 0, 3, 0, 0, 0 )
shape = SubResource( 2 )

[node name="CSGCylinder" type="CSGCylinder" parent="TrayRigidBody/CollisionShape"]
sides = 30

[node name="ScoreLabel" type="RichTextLabel" parent="."]
margin_left = 30.0
margin_top = 44.0
margin_right = 316.0
margin_bottom = 63.0
text = "Score:"

[node name="MessageLabel" type="RichTextLabel" parent="."]
margin_left = 449.0
margin_top = 284.0
margin_right = 608.0
margin_bottom = 302.0
text = "Press Any Key to Start"
fit_content_height = true
scroll_active = false

[node name="BestScoreLabel" type="RichTextLabel" parent="."]
margin_left = 29.0
margin_top = 16.0
margin_right = 305.0
margin_bottom = 41.0
text = "Best Score: "
